--- a/my-app/package.json
+++ b/my-app/package.json
@@ -38,5 +38,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@cucumber/cucumber": "^12.4.0",
+    "playwright": "^1.57.0"
   }
 }
