--- a/my-app/package.json
+++ b/my-app/package.json
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "@cucumber/cucumber": "^12.4.0",
-    "playwright": "^1.57.0"
+    "playwright": "^1.57.0",
+    "typescript": "4.9.5"
   }
 }
